# opentofu-state-manager-api

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
docker/: .env  Dockerfile  docker-compose.yaml
examples/usage/: main.tf
migrations/: env.py
migrations/versions/: 001_initial.py  46508283c198_add_state_versions.py  77c3995c8465_add_operation_id_column_to_states_table.py
scripts/: setup_local.sh  start.sh
src/: main.py  settings.py
src/controllers/: health.py  opentofu.py  schema.py
src/core/: auth.py  logging.py  settings.py
src/db/: base.py  models.py  session.py
src/repos/: schema.py  state.py  storage.py
src/repos/state/: __init__.py  state_repos.py
src/repos/storage/: __init__.py  aws_repos.py  base.py  factory.py  minio_repos.py
src/services/: state.py  storage.py
tests/: conftest.py
tests/unit/controllers/: test_health.py  test_opentofu.py
tests/unit/repos/: test_state.py  test_storage.py
tests/unit/services/: test_state.py
usage_local/: main.tf
